src/objects/JF_1757_Parent_Subquery__c.object
<CustomObject>
    <fields>
        <fullName>SomeCount__c</fullName>
        <label>SomeCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Some_Date__c</fullName>
        <label>Some_Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Some_Text__c</fullName>
        <label>Some_Text</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>JF_1757_Parent_Subquery</label>
    <nameField>
        <label>JF_1757_Parent_Subquery Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>JF_1757_Parent_Subqueries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>